<resources>
    <string name="app_name">TaskMate</string>
    <string name="click_to_login" />
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="you_are_logged_in">You are logged in!</string>
    <string-array name="task_progression">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Finished</item>
    </string-array>
</resources>